--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/log4j-api-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-42.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
